--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,8 @@
     <link rel="apple-touch-icon" sizes="144x144" href="assets/graphics/meta/apple-touch-icon-144x144.png" />
     <link rel="apple-touch-icon" sizes="152x152" href="assets/graphics/meta/apple-touch-icon-152x152.png" />
 
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" />
+
     <!-- build:css assets/styles/vendor.css -->
     <!-- endbuild -->
 
