Add map visualization of ETA

--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,8 @@
     <link rel="stylesheet" href="/assets/styles/main.css">
     <!-- endbuild -->
 
+    <link href='https://api.mapbox.com/mapbox-gl-js/v0.38.0/mapbox-gl.css' rel='stylesheet' />
+
   </head>
   <body>
     <div id="app-container">
