--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="The Rural Roads Accessibility tool allows policymakers and analysts to assess the accessibility of rural populations in relation to critical services such as schools and hospitals." />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>Rural Road Accessibility</title>
+    <title>Rural Accessibility Map</title>
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
